<resources>
    <string name="app_name">Cartoleria</string>
    <string name="action_settings">Opzioni</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Welcome</string>
    <string name="registrati">Registrati</string>

    <string name="benvenuti">Benvenuti sulla vostra cartoleria a portata di touch!</string>
    <string name="intro">Registrati o accedi per scoprire tutte le nostre offerte</string>
    <string name="accedi">Accedi</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome">benvenuti</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="insert_email">Please insert your email in the space below</string>
    <string name="input_email_hint">input a valid email address</string>
    <string name="insert_password">insert your password in the space below</string>
    <string name="input_password_hint">input password</string>
    <string name="Login">Login</string>
    <string name="Error">Values not valid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>